Add weight modifier to movement based on number of riders

--- a/source/todo.txt
+++ b/source/todo.txt
@@ -1,6 +1,5 @@
-- loading / saving stacks of buddies
-- physics modifier when buddy stack gets taller?
-
++ physics modifier when buddy stack gets taller?
++ loading / saving stacks of buddies
 + make getting on buddies better
 + popping buddies off stack
 + physics for inactive buddies
