--- a/source/todo.txt
+++ b/source/todo.txt
@@ -1,3 +1,9 @@
+before i hand it off:
+- spike object
+- death / respawn
+- curtain fade
+- levels read from externall folder
+
 + physics modifier when buddy stack gets taller?
 + loading / saving stacks of buddies
 + make getting on buddies better
